tests/fixtures/guardrails/invalid/route-imports-domain/app/routes/products.ts
import { writeProducts } from "~/domain/products/write.server";

export async function action() {
  return writeProducts();
}
